--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -7698,26 +7698,21 @@
         margin-right: 20px; } }
     #sandbox .tone--heroic .article__header__logo-container__logo-svg path {
       fill: #ffffff; }
-  #sandbox .tone--heroic .article__header__series-container {
-    position: relative;
-    max-width: 260px;
-    top: 36px; }
-    @media all and (min-width: 56.25em) {
-      #sandbox .tone--heroic .article__header__series-container {
-        top: 0; } }
   #sandbox .tone--heroic .article__header__series-container__content {
-    position: relative;
-    margin: 0 auto;
-    padding: 0 10px; }
-  #sandbox .tone--heroic .article__header__series-container__content__background {
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' opacity='.85' width='1088.5' height='277.725' viewBox='0 0 1088.5 277.725' fill='#005689'><path d='M10 11l27.616 266.725 1024.448-90.137 19.5-157.492'></path></svg>");
+    background-size: cover;
+    background-position: 0px 0px;
+    background-repeat: no-repeat;
     position: absolute;
-    top: -6px;
-    width: 260px; }
-  #sandbox .tone--heroic .article__header__series-container__content__background__svg {
-    opacity: .85;
-    width: 100%;
-    fill: #005689;
-    height: 100%; }
+    width: 260px;
+    top: -8px;
+    left: -4px;
+    padding-left: 24px;
+    padding-top: 12px;
+    padding-bottom: 26px; }
+    @media all and (max-width: 40.62em) {
+      #sandbox .tone--heroic .article__header__series-container__content {
+        top: 36px; } }
   #sandbox .tone--heroic .article__header__series-container__content__links {
     position: absolute;
     left: 20px;
@@ -7732,44 +7727,48 @@
     line-height: 19px;
     color: #ffffff; }
   #sandbox .tone--heroic .article__header__headline {
-    top: 314px;
+    top: 310px;
     position: relative;
     width: 100%; }
+    @media all and (min-width: 75em) {
+      #sandbox .tone--heroic .article__header__headline {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding-left: 240px; } }
   #sandbox .tone--heroic .article__header__headline__container {
     padding: 0;
     box-sizing: border-box;
     position: relative;
     margin: 0 auto; }
+    @media all and (min-width: 75em) {
+      #sandbox .tone--heroic .article__header__headline__container {
+        margin: 0; } }
   #sandbox .tone--heroic .article__header__headline__container__content {
+    min-height: 150px;
     max-width: 620px;
-    margin: 0 21px;
     width: 100%;
-    margin: auto;
-    position: relative; }
-  #sandbox .tone--heroic .article__header__headline__container__content__background {
-    position: absolute;
-    width: 100%; }
-  #sandbox .tone--heroic .article__header__headline__container__content__background__svg {
-    fill: #4bc6df;
-    opacity: .85;
-    width: 100%; }
+    margin: 0 auto;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='654' opacity='.85' fill='#4bc6df' height='138' viewBox='396 314 654 138' preserveAspectRatio='none'><path d='M396.06 319.533l5.534 116.44 636.893 15.277L1049.06 314'></path></svg>");
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat; }
+    @media all and (min-width: 75em) {
+      #sandbox .tone--heroic .article__header__headline__container__content {
+        margin: 0; } }
   #sandbox .tone--heroic .article__header__headline__container__content h1 {
     font-size: 28px;
     line-height: 32px;
     font-family: "Guardian Egyptian Web", Georgia, serif;
     font-weight: normal;
-    position: absolute;
     font-weight: 200;
     color: #ffffff;
-    margin: 12px 0;
-    max-width: 580px;
-    padding: 0 20px; }
+    max-width: 580px; }
   #sandbox .tone--heroic .article__body {
     margin-top: -22px;
     background-color: #fff; }
   #sandbox .tone--heroic .article__body > .prose::before {
     font-size: 3rem;
-    color: #345c52;
+    color: #A8D8F2;
     content: '\E092';
     line-height: 0;
     font-family: "Guardian Icons", Georgia, serif;
@@ -7781,19 +7780,40 @@
   #sandbox .tone--heroic .article__body > .prose > p:first-of-type {
     line-height: 24px;
     font-family: "Guardian Egyptian Web", Georgia, serif;
-    color: #345c52;
+    color: #3C7CA1;
     margin-top: 12px;
     font-size: 22px;
     font-weight: 200; }
-  #sandbox .tone--heroic .article__body > .prose blockquote footer, #sandbox .tone--heroic .article__body > .prose blockquote::before, #sandbox .tone--heroic .article__body > .prose blockquote::after {
-    color: #345c52; }
-  #sandbox .tone--heroic .article__body > .prose > p:first-of-type {
+  #sandbox .tone--heroic .article__body > .prose h2 {
+    color: #005689;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' opacity='.85' width='1088.5' height='277.725' viewBox='0 0 1088.5 277.725' fill='#4bc6df'><path d='M10 11l27.616 266.725 1024.448-90.137 19.5-157.492'></path></svg>");
+    background-size: cover;
+    background-position: 0px 0px;
+    background-repeat: no-repeat;
+    padding-top: 14px;
+    padding-bottom: 28px;
+    padding-left: 12px;
+    width: 260px;
+    font-size: 20px;
     line-height: 24px;
-    font-family: "Guardian Egyptian Web", Georgia, serif;
-    color: #345c52;
-    margin-top: 12px;
-    font-size: 22px;
-    font-weight: 200; }
+    margin-bottom: 24px;
+    margin-top: 12px; }
+  #sandbox .tone--heroic .article__body > .prose .element-pullquote blockquote {
+    padding: 0; }
+    #sandbox .tone--heroic .article__body > .prose .element-pullquote blockquote::before {
+      color: #A8D8F2;
+      float: left;
+      line-height: 0;
+      padding-right: 8px;
+      padding-left: 2px;
+      padding-top: 4px;
+      position: relative; }
+    #sandbox .tone--heroic .article__body > .prose .element-pullquote blockquote p {
+      color: #4bc6df; }
+    #sandbox .tone--heroic .article__body > .prose .element-pullquote blockquote::after {
+      content: ""; }
+    #sandbox .tone--heroic .article__body > .prose .element-pullquote blockquote footer {
+      clear: left; }
   #sandbox .tone--liveBlog .section__container {
     border-bottom: 1px rgba(255, 255, 255, 0.4) dotted; }
   #sandbox .tone--liveBlog .section {
