--- a/ArticleTemplates/assets/scss/tones/_tone--heroic.scss
+++ b/ArticleTemplates/assets/scss/tones/_tone--heroic.scss
@@ -97,7 +97,6 @@
     }
 
     .article__header__headline {
-    	top: 310px;
     	position: relative;
 	    width: 100%;
 
@@ -106,6 +105,16 @@
         	margin: 0 auto;
         	padding-left: 240px;
         }
+
+        height: 422px;
+        flex-direction: column;
+	    justify-content: flex-end;
+	    display: flex;
+
+	   	&::before {
+	   		flex-grow: 1;
+	   		content: '';
+	   	}
     }
 
     .article__header__headline__container {
@@ -117,6 +126,8 @@
 	    @include mq($from: col4) {
 	    	margin: 0;
 	    }
+
+
     }
 
     .article__header__headline__container__content {
@@ -124,15 +135,16 @@
     	max-width: 620px;
 		width: 100%;
 		margin: 0 auto;
-
-		@include mq($from: col4) {
-	    	margin: 0;
-	    }
-
+		display: table;
 	    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='654' opacity='.85' fill='#4bc6df' height='138' viewBox='396 314 654 138' preserveAspectRatio='none'><path d='M396.06 319.533l5.534 116.44 636.893 15.277L1049.06 314'></path></svg>");
 	    background-size: cover;
 	    background-position: 50% 50%;
 	    background-repeat: no-repeat;
+		padding: 12px 8px 24px 8px;
+
+		@include mq($from: col4) {
+	    	margin: 0;
+	    }
     }
 
 	.article__header__headline__container__content h1 {
@@ -143,6 +155,8 @@
 		font-weight: 200;
 		color: #ffffff;
 		max-width: 580px;
+		display: table-cell;
+	    vertical-align: middle;
 	}
 
 	.article__body {
