--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -7727,14 +7727,20 @@
     line-height: 19px;
     color: #ffffff; }
   #sandbox .tone--heroic .article__header__headline {
-    top: 310px;
     position: relative;
-    width: 100%; }
+    width: 100%;
+    height: 422px;
+    flex-direction: column;
+    justify-content: flex-end;
+    display: flex; }
     @media all and (min-width: 75em) {
       #sandbox .tone--heroic .article__header__headline {
         max-width: 1200px;
         margin: 0 auto;
         padding-left: 240px; } }
+    #sandbox .tone--heroic .article__header__headline::before {
+      flex-grow: 1;
+      content: ''; }
   #sandbox .tone--heroic .article__header__headline__container {
     padding: 0;
     box-sizing: border-box;
@@ -7748,10 +7754,12 @@
     max-width: 620px;
     width: 100%;
     margin: 0 auto;
+    display: table;
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='654' opacity='.85' fill='#4bc6df' height='138' viewBox='396 314 654 138' preserveAspectRatio='none'><path d='M396.06 319.533l5.534 116.44 636.893 15.277L1049.06 314'></path></svg>");
     background-size: cover;
     background-position: 50% 50%;
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    padding: 12px 8px 24px 8px; }
     @media all and (min-width: 75em) {
       #sandbox .tone--heroic .article__header__headline__container__content {
         margin: 0; } }
@@ -7762,7 +7770,9 @@
     font-weight: normal;
     font-weight: 200;
     color: #ffffff;
-    max-width: 580px; }
+    max-width: 580px;
+    display: table-cell;
+    vertical-align: middle; }
   #sandbox .tone--heroic .article__body {
     margin-top: -22px;
     background-color: #fff; }
